# OpenSteamworksProtobufs

./: .gitignore  CMakeLists.txt  README.md
include/: EMsg.hpp
src/: CMakeLists.txt
src/Protobuf/: CMakeLists.txt
